Fixed html for pictures that were not showing up on the page and resized original trumbones image

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,11 @@
   margin: 0;
 }
 
+/*sizing images*/
+img {
+  width: 240px;
+}
+
 /*nav on the top*/
 #first {
   position: -webkit-sticky;
